[front] fix notification icon jumping

--- a/front/src/carbure/components/notifications.module.css
+++ b/front/src/carbure/components/notifications.module.css
@@ -1,7 +1,6 @@
 .notifications {
   overflow: visible;
-  padding: var(--spacing-m);
-  padding-left: 0;
+  padding: 0 var(--spacing-s);
 }
 
 .notificationMenu {
